fixed the spacing and attempting to fix infostyle.css

--- a/infoStyle.css
+++ b/infoStyle.css
@@ -49,7 +49,7 @@ legend{
     }
     
     fieldset{
-        flex-shrink: 1;
+        flex-grow: 1;
     }
     
  /* 
