--- a/service.css
+++ b/service.css
@@ -15,8 +15,7 @@
 @media screen and (min-width: 800px){
     h1{
         text-align: left;
-        margin-left: 2px;
-        margin-bottom: 2%;
+        margin: 2%;
     }
     
     h3{
